--- a/Basic-Web-Development/JavaScript/WorldBestJSCourse-master/index.html
+++ b/Basic-Web-Development/JavaScript/WorldBestJSCourse-master/index.html
@@ -6,20 +6,21 @@
     <title>Document</title>
     <style>
       body {
-        background-color: red;
+        background-color: #f0f0f0;
+        font-family: Arial, sans-serif;
       }
     </style>
   </head>
   <body>
     <h1>Welcome to world best Javascript Course</h1>
     <!-- inline style  -->
-    <button onclick="alert('Welcome, eoseo')">Welcome</button>
+    <button onclick="alert('Welcome, hello world!')">Welcome</button>
 
     <!-- internal style  -->
     <script>
       alert("Welcome, eoseo");
       console.log("Plz subscribe, like share & comment ");
     </script>
-    <script src="intro.js"></script>
+    <script src="1_datatypes.js"></script>
   </body>
 </html>
