--- a/Basic-Web-Development/JavaScript/WorldBestJSCourse-master/index.html
+++ b/Basic-Web-Development/JavaScript/WorldBestJSCourse-master/index.html
@@ -21,6 +21,6 @@
       alert("Welcome, eoseo");
       console.log("Plz subscribe, like share & comment ");
     </script>
-    <script src="1_datatypes.js"></script>
+    <script src="3_expressions.js"></script>
   </body>
 </html>
