--- a/Basic-Web-Development/JavaScript/WorldBestJSCourse-master/index.html
+++ b/Basic-Web-Development/JavaScript/WorldBestJSCourse-master/index.html
@@ -18,7 +18,7 @@
 
     <!-- internal style  -->
     <script>
-      alert("Welcome, eoseo");
+      // alert("Welcome, eoseo");
       console.log("Plz subscribe, like share & comment ");
     </script>
     <script src="4_loops.js"></script>
