--- a/Basic-Web-Development/JavaScript/WorldBestJSCourse-master/windows/bom/index.html
+++ b/Basic-Web-Development/JavaScript/WorldBestJSCourse-master/windows/bom/index.html
@@ -20,6 +20,13 @@
     >
       Navigate
     </button>
+
+    <!-- my work-->
+     <button
+      onclick="window.open('https://elibrarybest.vercel.app/', '_blank')"
+     >
+      E-LIBRARY
+     </button>
     <!--? ========== End Window Property ========== -->
 
     <!--? ========== Start History ========== -->
