--- a/Basic-Web-Development/JavaScript/WorldBestJSCourse-master/windows/dom/index.html
+++ b/Basic-Web-Development/JavaScript/WorldBestJSCourse-master/windows/dom/index.html
@@ -69,11 +69,11 @@
       //? closest(selector):
       let closestElem = previousElementSibling.closest; //it showes undefine
 
-      //* ==============================
-      //* DOM Searching
-      //* ==============================
-      console.log(closestElem);
+      //? parentNode / parentElement:
+      let parentNode = firstChild.parentNode;
+      let parentElement = firstElemChild.parentElement;
 
+      console.log(parentElement);
     </script>
   </body>
 </html>
