--- a/Basic-Web-Development/JavaScript/WorldBestJSCourse-master/index.html
+++ b/Basic-Web-Development/JavaScript/WorldBestJSCourse-master/index.html
@@ -87,7 +87,12 @@
       // }
       // console.log(date);
 
+
       // document.getElementById("date").innerHTML = date();
+
+      // setInterval(() => {
+      //   document.getElementById("date").innerHTML = date();
+      // }, 1000);
 
 
       // document.getElementById("date").innerHTML = new Date().toLocaleString("en-US", {
