--- a/Basic-Web-Development/JavaScript/WorldBestJSCourse-master/timeBasedEvents/project.html
+++ b/Basic-Web-Development/JavaScript/WorldBestJSCourse-master/timeBasedEvents/project.html
@@ -19,8 +19,69 @@
       <div class="resetValue"></div>
     </section>
     <script>
+      // const countDownElement = document.getElementById("countDown");
+      // const resetValueElement = document.querySelector(".resetValue");
+      // let startCount = 0;
+      // let intervalId;
+
+      // // Function to start the timer
+      // const startTimer = () => {
+      //   intervalId = setInterval(() => {
+      //     countDownElement.innerText = startCount++;
+      //   }, 1000);
+      // };
+
+      // // Function to stop the timer and show stop time
+      // const stopTimer = () => {
+      //   showStopValue();
+      //   clearInterval(intervalId);
+      // };
+
+      // // Function to reset the timer
+      // const resetTimer = () => {
+      //   startCount = 0;
+      //   countDownElement.innerText = startCount;
+      //   clearInterval(intervalId);
+      // };
+
+      // // Function to show stop value
+      // const showStopValue = () => {
+      //   const newPara = document.createElement("p");
+      //   newPara.innerText = `The stop time is ${startCount - 1}`;
+      //   resetValueElement.append(newPara);
+      // };
+
+      // // Function to show stop time
+      // const clearTimeValue = () => {
+      //   resetValueElement.innerHTML = "";
+      // };
+
+      // // Event listeners
+      // document
+      //   .querySelector(".start_btn")
+      //   .addEventListener("click", startTimer);
+
+      // document
+      //   .querySelector(".reset_btn")
+      //   .addEventListener("click", resetTimer);
+
+      // document.querySelector(".stop_btn").addEventListener("click", stopTimer);
+
+      // document
+      //   .querySelector(".time_btn")
+      //   .addEventListener("click", showStopValue);
+
+      // document
+      //   .querySelector(".clear_btn")
+      //   .addEventListener("click", clearTimeValue);
+
+
+
+      // My working code
       const countDownElement = document.getElementById("countDown");
+
       const resetValueElement = document.querySelector(".resetValue");
+
       let startCount = 0;
       let intervalId;
 
@@ -29,51 +90,47 @@
         intervalId = setInterval(() => {
           countDownElement.innerText = startCount++;
         }, 1000);
-      };
+      }
 
       // Function to stop the timer and show stop time
-      const stopTimer = () => {
+      const stopTimer = () =>{
         showStopValue();
         clearInterval(intervalId);
-      };
+      }
 
       // Function to reset the timer
-      const resetTimer = () => {
+      const resetTimer =  () => {
         startCount = 0;
         countDownElement.innerText = startCount;
         clearInterval(intervalId);
-      };
+      }
 
       // Function to show stop value
       const showStopValue = () => {
         const newPara = document.createElement("p");
         newPara.innerText = `The stop time is ${startCount - 1}`;
         resetValueElement.append(newPara);
-      };
+      }
 
       // Function to show stop time
       const clearTimeValue = () => {
         resetValueElement.innerHTML = "";
-      };
+      }
 
       // Event listeners
-      document
-        .querySelector(".start_btn")
-        .addEventListener("click", startTimer);
+      document.querySelector(".start_btn").addEventListener("click", startTimer);
 
-      document
-        .querySelector(".reset_btn")
-        .addEventListener("click", resetTimer);
+      document.querySelector(".reset_btn").addEventListener("click", resetTimer);
 
       document.querySelector(".stop_btn").addEventListener("click", stopTimer);
 
-      document
-        .querySelector(".time_btn")
-        .addEventListener("click", showStopValue);
+      document.querySelector(".time_btn").addEventListener("click", showStopValue);
 
-      document
-        .querySelector(".clear_btn")
-        .addEventListener("click", clearTimeValue);
+      document.querySelector(".clear_btn").addEventListener("click", clearTimeValue);
+
+      // My working code ends here
+      // The code above is a simple timer application that allows you to start, stop, reset, and display the time elapsed.
+      // It uses setInterval to update the count every second and clearInterval to stop the timer.
     </script>
   </body>
 </html>
