--- a/Basic-Web-Development/JavaScript/Z_PRACTICE/Project 1/index.html
+++ b/Basic-Web-Development/JavaScript/Z_PRACTICE/Project 1/index.html
@@ -4,8 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form Validation</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body>
-    <div class="container"></div>
+<body class="bg-gray-100 flex items-center justify-center min-h-screen">
+      <div class="bg-white shadow-md rounded-xl p-8 w-full max-w-md space-y-6">
+    <div class="flex flex-col items-center">
+      <div class="text-3xl">⚡</div>
+      <h2 class="text-2xl font-semibold">Login</h2>
+      <p class="text-gray-500 text-sm">Enter your details to login.</p>
+    </div>
+
+    <form class="space-y-4" onsubmit="return checkData()">
+      <!-- Email -->
+      <div>
+        <label class="block mb-1 font-medium text-sm">Email</label>
+        <input type="email" id="email" placeholder="Enter your Email" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-black">
+        <!-- Uncomment below for error -->
+        <!-- <p class="text-sm text-red-600 mt-1">No account found with this email. Please sign up.</p> -->
+      </div>
+
+      <!-- Password -->
+      <div>
+        <div class="flex justify-between items-center mb-1">
+          <label class="font-medium text-sm">Password</label>
+          <a href="#" class="text-sm text-gray-600 hover:underline">Forgot password?</a>
+        </div>
+        <input type="password" id="password" placeholder="Enter your password" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-black">
+      </div>
+
+      <!-- Log In Button -->
+      <button type="submit" class="w-full bg-black text-white py-2 rounded-md hover:bg-gray-800">Log In</button>
+
+      <!-- Or separator -->
+      <div class="flex items-center justify-center">
+        <span class="text-gray-400 text-sm">OR</span>
+      </div>
+
+      <!-- Social Logins -->
+      <button type="button" onclick="loginWithGoogle" class="w-full flex items-center justify-center border border-gray-300 py-2 rounded-md hover:bg-gray-50">
+        <img src="https://img.icons8.com/ios-filled/20/000000/google-logo.png" class="mr-2" />
+        Continue with Google
+      </button>
+      <button type="button" onclick="loginWithApple" class="w-full flex items-center justify-center border border-gray-300 py-2 rounded-md hover:bg-gray-50">
+        <img src="https://img.icons8.com/ios-filled/20/000000/mac-os.png" class="mr-2" />
+        Continue with Apple
+      </button>
+    </form>
+
+    <p class="text-center text-sm text-gray-600">
+      Don’t have an account yet?
+      <a href="#" class="text-black font-medium hover:underline">Sign up</a>
+    </p>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
