--- a/Basic-Web-Development/JavaScript/Z_PRACTICE/Project 1/index.html
+++ b/Basic-Web-Development/JavaScript/Z_PRACTICE/Project 1/index.html
@@ -41,11 +41,11 @@
       </div>
 
       <!-- Social Logins -->
-      <button type="button" onclick="loginWithGoogle" class="w-full flex items-center justify-center border border-gray-300 py-2 rounded-md hover:bg-gray-50">
+      <button type="button" onclick="loginWithGoogle()" class="w-full flex items-center justify-center border border-gray-300 py-2 rounded-md hover:bg-gray-50">
         <img src="https://img.icons8.com/ios-filled/20/000000/google-logo.png" class="mr-2" />
         Continue with Google
       </button>
-      <button type="button" onclick="loginWithApple" class="w-full flex items-center justify-center border border-gray-300 py-2 rounded-md hover:bg-gray-50">
+      <button type="button" onclick="loginWithApple()" class="w-full flex items-center justify-center border border-gray-300 py-2 rounded-md hover:bg-gray-50">
         <img src="https://img.icons8.com/ios-filled/20/000000/mac-os.png" class="mr-2" />
         Continue with Apple
       </button>
